--- a/src/v00v.Views/Popup/Channel/ChannelPopupControl.xaml
+++ b/src/v00v.Views/Popup/Channel/ChannelPopupControl.xaml
@@ -1,15 +1,13 @@
 ﻿<UserControl x:Class="v00v.Views.Popup.Channel.ChannelPopupControl"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" xmlns="https://github.com/avaloniaui"
-             xmlns:channeltag="clr-namespace:v00v.Views.Popup.Channel"
-             xmlns:controls="clr-namespace:v00v.Views.Controls">
+             xmlns:channeltag="clr-namespace:v00v.Views.Popup.Channel" >
     <Grid RowDefinitions="auto,auto,auto,auto,auto,auto" MaxWidth="380">
-        <controls:ExtendedTextBox Grid.Row="0" ToolTip.Tip="{Binding SubTitle, Mode=OneWay}" Watermark="Id (required)"
-                                  IsReadOnly="{Binding !IsChannelEnabled, Mode=OneWay}"
-                                  Text="{Binding ChannelId, Mode=TwoWay}" />
-        <controls:ExtendedTextBox Grid.Row="1" Watermark="Title (optional)" Text="{Binding ChannelTitle, Mode=TwoWay}" />
+        <TextBox Grid.Row="0" ToolTip.Tip="{Binding SubTitle, Mode=OneWay}" Watermark="Id (required)"
+                 IsReadOnly="{Binding !IsChannelEnabled, Mode=OneWay}"
+                 Text="{Binding ChannelId, Mode=TwoWay}" />
+        <TextBox Grid.Row="1" Watermark="Title (optional)" Text="{Binding ChannelTitle, Mode=TwoWay}" />
         <Grid Grid.Row="2" ColumnDefinitions="auto,auto,*" Margin="0,15,0,0">
-            <Button Grid.Column="0" Classes="Link" Command="{Binding AddTagCommand, Mode=OneWay}"
-                    x:CompileBindings="False">
+            <Button Grid.Column="0" Classes="Link" Command="{Binding AddTagCommand, Mode=OneWay}" x:CompileBindings="False">
                 <TextBlock Text="Add" />
             </Button>
             <Button Grid.Column="1" Classes="Link" Command="{Binding SaveTagCommand, Mode=OneWay}"
@@ -40,7 +38,7 @@
         <Style Selector="ListBox">
             <Setter Property="Height" Value="100" />
             <Setter Property="BorderThickness" Value="1" />
-            <Setter Property="BorderBrush" Value="#727985" />
+            <Setter Property="BorderBrush" Value="#bbbbbb" />
         </Style>
 
         <Style Selector="ListBox CheckBox">
@@ -95,7 +93,7 @@
             <Setter Property="Height" Value="28" />
             <Setter Property="Margin" Value="0,8,0,0" />
             <Setter Property="BorderThickness" Value="1" />
-            <Setter Property="BorderBrush" Value="#727985" />
+            <Setter Property="BorderBrush" Value="#bbbbbb" />
         </Style>
 
         <Style Selector="TextBox /template/ Border">
