--- a/src/v00v.Views/Popup/Item/CommentControl.xaml
+++ b/src/v00v.Views/Popup/Item/CommentControl.xaml
@@ -1,10 +1,10 @@
 ﻿<UserControl x:Class="v00v.Views.Popup.Item.CommentControl" xmlns="https://github.com/avaloniaui"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
-    <Border BorderThickness="0.2" BorderBrush="#2a2b2e" CornerRadius="2">
+    <Border BorderThickness="0.4" BorderBrush="#bbbbbb" CornerRadius="2">
         <Grid RowDefinitions="auto,auto" ColumnDefinitions="*,auto">
             <StackPanel Grid.Row="0" Grid.Column="0" Orientation="Horizontal"
                         Background="{Binding BackgroundReply, Mode=OneWay}">
-                <Border BorderBrush="#FF000000" BorderThickness="0.3" CornerRadius="3" Margin="5,0,0,2"
+                <Border BorderBrush="#bbbbbb" BorderThickness="0.4" CornerRadius="3" Margin="5,0,0,2"
                         VerticalAlignment="Bottom" Background="{Binding BackgroundAuthor, Mode=OneWay}">
                     <TextBlock Text="{Binding Author, Mode=OneWay}" FontSize="12" Margin="5,0,5,0" />
                 </Border>
