--- a/src/v00v.Views/Catalog/CatalogControl.xaml
+++ b/src/v00v.Views/Catalog/CatalogControl.xaml
@@ -159,6 +159,12 @@
         </Expander>
     </Grid>
     <UserControl.Styles>
+        <Style Selector="MenuItem:selected /template/ ContentPresenter">
+            <Setter Property="Background" Value="#E6E6FA" />
+            <Setter Property="BorderThickness" Value="0.4" />
+            <Setter Property="BorderBrush" Value="#bbbbbb" />
+        </Style>
+
         <Style Selector="ComboBox">
             <Setter Property="BorderThickness" Value="1" />
             <Setter Property="Background" Value="#1b2333" />
