fix playlist menu

--- a/src/v00v.Views/Playlists/PlaylistControl.xaml
+++ b/src/v00v.Views/Playlists/PlaylistControl.xaml
@@ -95,6 +95,12 @@
         </Grid>
     </Expander>
     <UserControl.Styles>
+        <Style Selector="MenuItem:selected /template/ ContentPresenter">
+            <Setter Property="Background" Value="#E6E6FA" />
+            <Setter Property="BorderThickness" Value="0.4" />
+            <Setter Property="BorderBrush" Value="#bbbbbb" />
+        </Style>
+        
         <Style Selector="TextBox">
             <Setter Property="BorderThickness" Value="1" />
             <Setter Property="Foreground" Value="#ffffff" />
